<resources>
    <string name="app_name">Spectre</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Spectre EEG</string>
    <string name="second_fragment_label">Spectre EEG</string>
    <string name="next">Next</string>
    <string name="Sign_in">Sign in</string>
    <string name="Login">Login</string>
    <string name="previous">Previous</string>
    <string name="connected">Headset connected！</string>
    <string name="connect_headset">CONNECT HEADSET</string>
    <string name="calibrate">Calibrate</string>

    <string name="lorem_ipsum">
        SPECTRE
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string-array name="epilepsy">
        <item>I don\'t have epilepsy</item>
        <item>I don\'t have epilepsy anymore (no current medication)</item>
        <item>I have a perpetuous treatment fir epilepsy</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to say</item>
    </string-array>
</resources>